--- a/index.html
+++ b/index.html
@@ -424,8 +424,10 @@
 
       function refreshUserLogin() {        
         if ( (user != null) && (user.isLoggedIn()) ) {
+          console.log('Refreshing user login. User is logged in.');
           $('#headerLoginStatus').html('<input type="button" class="btn btn-info" value="'+user.username+'" onclick="logout();" id="logoutButton"></input>');
         } else {
+          console.log('Refreshing user login. User is not logged: "'+user+'"');
           $('#headerLoginStatus').html('<input type="button" class="btn btn-success" value="Log in" onclick="loginWithFacebook();" id="loginButton"></input>');
         }
       }
