--- a/index.html
+++ b/index.html
@@ -437,14 +437,22 @@
         }, {scope: 'email'});
       }
 
-      function refreshUserLogin() {        
-        if ( (user != null) && (user.isLoggedIn()) ) {
-          console.log('Refreshing user login. User is logged in.');
-          $('#headerLoginStatus').html('<input type="button" class="btn btn-info" value="'+user.username+'" onclick="logout();" id="logoutButton"></input>');
-        } else {
-          console.log('Refreshing user login. User is not logged: "'+user+'"');
+      function refreshUserLogin() {
+
+        if (user == null) {
           $('#headerLoginStatus').html('<input type="button" class="btn btn-success" value="Log in" onclick="loginWithFacebook();" id="loginButton"></input>');
         }
+
+        user.isLoggedIn({
+          yes: function(){
+            console.log('Refreshing user login. User is logged in.');
+          $('#headerLoginStatus').html('<input type="button" class="btn btn-info" value="'+user.username+'" onclick="logout();" id="logoutButton"></input>');
+          },
+          no: function(){
+            console.log('Refreshing user login. User is not logged: "'+user+'"');
+          $('#headerLoginStatus').html('<input type="button" class="btn btn-success" value="Log in" onclick="loginWithFacebook();" id="loginButton"></input>');
+          }
+        });
       }
 
       function logout() {
