--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
               user = new StackMob.User({ username: u });
               user.fetch();
             }
-            $('#headerLoginStatus').html('<input type="button" class="btn btn-info" value="'+u+'" onclick="logout();" id="logoutButton"></input>');
+            $('#headerLoginStatus').html('<img src="http://graph.facebook.com/'+u+'/picture"/><input type="button" class="btn btn-info" value="'+u+'" onclick="logout();" id="logoutButton"></input>');
           },
           no: function(){
             console.log('Refreshing user login. User is not logged: "'+user+'"');
