--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         var result = '';
 
         result += '<div class="btn-group">';
-        result += '<button class="btn dropdown-toggle" data-toggle="dropdown">';
+        result += '<button class="dropdown-toggle" data-toggle="dropdown">';
         result += '<img src="http://graph.facebook.com/'+user.get('facebookUsername')+'/picture"/>' + user.get('username') + '<span class="caret"></span>';
         result += '</button>';
         result += '<ul class="dropdown-menu">';
