--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           },
           no: function(){
             console.log('Refreshing user login. User is not logged: "'+user+'"');
-            $('#headerLoginStatus').html('<div class="fb-login-button btn" data-show-faces="false" data-width="300" data-max-rows="1" onclick="loginWithFacebook();"></div>');
+            $('#headerLoginStatus').html('<button class="btn" onclick="loginWithFacebook();"></button>');
           }
         });
       }
@@ -469,7 +469,7 @@
 
         result += '<div class="btn-group">';
         result += '<button class="dropdown-toggle" data-toggle="dropdown">';
-        result += '<img src="http://graph.facebook.com/'+user.get('facebookUsername')+'/picture"/>' + user.get('username') + '<span class="caret"></span>';
+        result += '<img src="http://graph.facebook.com/'+user.get('facebookUsername')+'/picture" height="75"/>' + user.get('username') + '<span class="caret"></span>';
         result += '</button>';
         result += '<ul class="dropdown-menu">';
         result += '<li onclick="logout();">Logout</li>';
