--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           },
           no: function(){
             console.log('Refreshing user login. User is not logged: "'+user+'"');
-            $('#headerLoginStatus').html('<button class="btn" onclick="loginWithFacebook();"></button>');
+            $('#headerLoginStatus').html('<button class="btn" onclick="loginWithFacebook();">Login with FB</button>');
           }
         });
       }
